filter alignment issue fixed

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_plp.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_plp.scss
@@ -331,7 +331,7 @@
 						.facetHead{
 							cursor:pointer;
 							h4{
-								margin:20px 0;
+								margin:15px 0;
 								font-size:14px;
 								a{
 									&:hover{
@@ -833,6 +833,7 @@
                 background-color: #2d2d2d; 
                 border-radius: 0px;
                 display:block;
+                font-size: 15px;
             }
             
             
